# SPDX-License-Identifier: Apache-2.0
# (c) Copyright 2004 - 2022 Xilinx, Inc. All rights reserved.
option('te_path', type: 'string', value: '',
       description: 'TE directory with build tools')
option('te_cflags', type: 'string', value: '',
       description: 'TE CFLAGS to be used')
option('te_ldflags', type: 'string', value: '',
       description: 'TE LDFLAGS to be used')
option('te_libdir', type: 'string', value: '',
       description: 'TE libraries location')
